# ohtun_miniprojekti_2022

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  LICENSE.md.txt  README.md  log.html  output.xml  pyproject.toml  references.bib  report.html  run_robot_tests.sh
.github/workflows/: CI.yml
src/: RefInputHandler.py  ReferenceLibrary.py  app.py  console_io.py  file_handler.py  index.py  reference_handler.py  references.bib  stub_io.py  validate_reference.py
src/refclasses/: bookref.py
src/storage/: book_references.csv
src/tests/: ReferenceLibrary.py  add_new_reference.robot  bookref_test.py  create_bibtex_file.robot  delete_reference.robot  file_handler_test.py  first_user_story_acceptance_criteria.robot  print_references.robot  reference_handler_test.py  resource.robot  sort_references.robot  tag_reference.robot  user_can_create_bibtex_file_from_references.robot  user_can_sort_references_in_addition_they_were_added.robot  user_can_tag_references.robot  validate_reference_test.py
