[tool.poetry]
name = "ohtun_miniprojekti_2022"
version = "0.1.0"
description = ""
authors = ["Eemil <eemil.arola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.0.1"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
